--- a/jukebox/templates/jukebox/panel.html
+++ b/jukebox/templates/jukebox/panel.html
@@ -2,7 +2,8 @@
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-<form action="{% url 'load' %}" method="post">
+
+<form action="{% url 'jukebox:play' %}" method="post">
 {% csrf_token %}
 <input type="text" value="Playlist ID" id="listID", name="listID">
 <input type="submit" value="Load" />
