--- a/jukebox/templates/jukebox/panel.html
+++ b/jukebox/templates/jukebox/panel.html
@@ -2,8 +2,18 @@
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
-<form action="{% url 'play' %}" method="post">
+<form action="{% url 'load' %}" method="post">
 {% csrf_token %}
 <input type="text" value="Playlist ID" id="listID", name="listID">
+<input type="submit" value="Load" />
+</form>
+
+<form action="{% url 'pause' %}" method="post">
+{% csrf_token %}
+<input type="submit" value="Pause" />
+</form>
+
+<form action="{% url 'play' %}" method="post">
+{% csrf_token %}
 <input type="submit" value="Play" />
 </form>
