--- a/alarm/templates/alarm/set_alarm.html
+++ b/alarm/templates/alarm/set_alarm.html
@@ -8,7 +8,7 @@
 <form action="{% url 'alarm:save_alarm' %}" method="post">
 {% csrf_token %}
 <input type="time" id="time", name="time">
-<input type="submit" value="Load" />
+<input type="submit" value="Set alarm" />
 </form>
 
 </body>
