--- a/jukebox/templates/jukebox/panel.html
+++ b/jukebox/templates/jukebox/panel.html
@@ -4,7 +4,7 @@
 
 <form action="{% url 'jukebox:load' %}" method="post">
 {% csrf_token %}
-<input type="text" value="Playlist ID" id="listID", name="listID">
+<input type="" value="Playlist ID" id="listID", name="listID">
 <input type="submit" value="Load" />
 </form>
 
