--- a/jukebox/templates/jukebox/panel.html
+++ b/jukebox/templates/jukebox/panel.html
@@ -1,4 +1,5 @@
 <h1>Jukebox Control Panel</h1>
+<h2>Party central!</h2>
 
 {% if error_message %}<p><strong>{{ error_message }}</strong></p>{% endif %}
 
