--- a/jukebox/templates/jukebox/panel.html
+++ b/jukebox/templates/jukebox/panel.html
@@ -19,6 +19,12 @@
 <input type="submit" value="Load" />
 </form>
 
+<form action="{% url 'jukebox:load' %}" method="post">
+	{% csrf_token %}
+	{{ form }}
+	<input type="submit" value="Submit">
+</form>
+
 <form action="{% url 'jukebox:pause' %}" method="post">
 {% csrf_token %}
 <input type="submit" value="Pause" />
@@ -26,5 +32,6 @@
 
 <form action="{% url 'jukebox:play' %}" method="post">
 {% csrf_token %}
-<input type="submit" value="Play" />
+<input type="submit" value="Play" />:w
+
 </form>
